# nation-bot

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  sentry.py  start.js
.github/workflows/: codeql-analysis.yml  codeql.yml  poetry.yml  req.yml
configs/: .secrets.json  settings.json
extensions/: auto_role.py  botutil.py  discord_verifier.py  find.py  player.py  queue.py  tables.py  tags.py
helpers/: tablemaker.py  updates  updates.py
utils/: init_logging.py  player_builder.py  stat_builder.py
